# katla

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  Dockerfile  Dockerfile-archlinux-latest  Dockerfile-ubuntu-1804  Dockerfile-ubuntu-2004  README.md  TODO  compiler.explorer.txt  main.cpp
app-kit/: CMakeLists.txt  core-application-uv.cpp  core-application-uv.h  core-application.cpp  core-application.h  event-loop-uv.cpp  event-loop-uv.h  event-loop.h  katla-appkit.h  signal-handler-uv.cpp  signal-handler-uv.h  signal-handler.h  timer-uv.cpp  timer-uv.h  timer.h
compositor/wayland/: CMakeLists.txt
core/: CMakeLists.txt  core-application.h  core-errors.cpp  core-errors.h  core.cpp  core.h  default-logger.h  dispatcher-thread.cpp  dispatcher-thread.h  error.cpp  error.h  event-loop.h  logger.h  observable.h  observer.h  point.h  posix-errors.cpp  posix-errors.h  posix-file.cpp  posix-file.h  posix-pipe.cpp  posix-pipe.h  posix-process.cpp  posix-process.h  posix-socket-test.cpp  posix-socket.cpp  posix-socket.h  posix-thread.cpp  posix-thread.h  primitives.h  ringbuffer.hpp  signal-handler.h  size.h  stopwatch.cpp  stopwatch.h  string-utils-test.cpp  string-utils.cpp  string-utils.h  subject.h  thread.cpp  (+8 more)
core-uv/: CMakeLists.txt  uv-core-application-test.cpp  uv-core-application.cpp  uv-core-application.h  uv-event-loop.cpp  uv-event-loop.h  uv-posix-process-test.cpp  uv-posix-process.cpp  uv-posix-process.h  uv-signal-handler.cpp  uv-signal-handler.h  uv-timer.cpp  uv-timer.h
core-uv/unit-tests/: CMakeLists.txt
core/unit-tests/: CMakeLists.txt  core-test.cpp  posix-socket-test.cpp
dart/: CMakeLists.txt
dart/c-api/: dart-image.cpp  dart-image.h
gpu/: CMakeLists.txt  katla-gpu.h
gpu/backend/: device.h  graphics-backend.h  graphics-configuration.h  physical-device.h
gpu/drawing/: render-view.h  skia-opengl.cpp  skia-opengl.h  skia-render-view.cpp  skia-render-view.h
gpu/render/: imgui-glfw-binder.cpp  imgui-glfw-binder.h  render-stats.h  render-view.h  scene.h  skia-opengl-binder.cpp  skia-opengl-binder.h  skia-render-view.cpp  skia-render-view.h
gpu/window/: window-factory.h  window.h
graphics/: CMakeLists.txt  build.py  color.h  graphics-backend.cpp  graphics-backend.h  graphics-configuration.h  image-drawing-simple.cpp  image-drawing-simple.h  image-drawing.h  image-file-writer.cppm  image-file-writer.h  image-processing.cpp  image-processing.h  image-processor.cpp  image-processor.h  image.cpp  image.h  katla-graphics.h  lut.cpp  lut.h  painter.h  render-stats.cpp  render-stats.h  render-view.cpp  render-view.h  scene.h  simple-painter.cpp  simple-painter.h  text-renderer.h  text-rendering.h  text-software-rendering-freetype.cpp  text-software-rendering-freetype.h
graphics-freetype/: CMakeLists.txt  bitmap-glyph.h  build.py  font-face-cache.cpp  font-face-cache.h  font-face-freetype.cpp  font-face-freetype.h  font-face-surface-writer.cpp  font-face-surface-writer.h  font-face-writer.cpp  font-face-writer.h  font-face.h  glyph-info.h  pixel-glyph.h  text-renderer-freetype.cpp  text-renderer-freetype.h  text-rendering-freetype.cpp  text-rendering-freetype.h
gtk/: CMakeLists.txt  gtk-application.cpp  gtk-application.h  gtk-button-impl.cpp  gtk-button-impl.h  gtk-column.cpp  gtk-column.h  gtk-list-view.cpp  gtk-list-view.h  gtk-row.cpp  gtk-row.h  gtk-text-impl.cpp  gtk-text-impl.h  gtk-widget-interface.h  gtk-window-factory.cpp  gtk-window.cpp
gtk4/: CMakeLists.txt  gtk-application.cpp  gtk-application.h  gtk-button-impl.cpp  gtk-button-impl.h  gtk-column.cpp  gtk-column.h  gtk-list-view.cpp  gtk-list-view.h  gtk-platform-builder.cpp  gtk-platform-builder.h  gtk-row.cpp  gtk-row.h  gtk-text-field-impl.cpp  gtk-text-field-impl.h  gtk-text-impl.cpp  gtk-text-impl.h  gtk-window-factory.h  gtk-window.cpp  gtk-window.h
gtk4/c-api/: gtk-application.cpp  gtk-application.h
gui-kit/: CMakeLists.txt  gui-kit.cpp  gui-kit.h  katla-guikit.h
gui-kit/window/: window-factory.h  window.h
image/: CMakeLists.txt  image-processor.cpp  image-processor.h  image.cpp  image.h  lut.cpp  lut.h  opencv-image-processor.cpp  opencv-image-processor.h  opencv-image-reader.cpp  opencv-image-reader.h  opencv-image-writer.cpp  opencv-image-writer.h
image/archived/: image-processor.cpp  image-processor.h
ipc/: CMakeLists.txt  frame-reader.cpp  frame-reader.h  ipc-kit.cpp  ipc-kit.h  katla-ipckit.h  messages.h  pipe.cpp  pipe.h  process-uv.cpp  process-uv.h  process.h
mqtt/: CMakeLists.txt  mqtt-client.cpp  mqtt-client.h  mqtt-errors.cpp  mqtt-errors.h  mqtt-message.h  mqtt-tests.cpp  mqtt.cpp  mqtt.h
renderer/: CMakeLists.txt  main.cpp  meson.build
sqlite/: CMakeLists.txt  sqlite-database-tests.cpp  sqlite-database.cpp  sqlite-database.h  sqlite-errors.cpp  sqlite-errors.h
ui/: CMakeLists.txt  application.cpp  application.h  button.cpp  button.h  column.cpp  column.h  container.h  list-view.h  platform-builder.h  platform-register.cpp  platform-register.h  row.h  text-field.cpp  text-field.h  text.cpp  text.h  widget.cpp
ui-components/: CMakeLists.txt  button.cpp  button.h  column.h  container.cpp  container.h  list-view.h  row.h  text.h  widget.h
ui-components-gtk/: CMakeLists.txt  ui-components-gtk.cpp
ui-qt/: CMakeLists.txt  ui-components-qt.cpp
websockets/: CMakeLists.txt  http-request.h  incoming-http-request.cpp  incoming-http-request.h  websocket-server-client-lws-impl.cpp  websocket-server-client-lws-impl.h  websocket-server-client-lws.cpp  websocket-server-client-lws.h  websocket-server-client.h  websocket-server-lws-private.cpp  websocket-server-lws-private.h  websocket-server-lws.cpp  websocket-server-lws.h
window-management/: CMakeLists.txt  katla-window-management.h  window-factory.cpp  window-factory.h  window.cpp  window.h
window-management-client-glfw/: CMakeLists.txt  glfw-window-factory.cpp  glfw-window-factory.h  glfw-window.cpp  glfw-window.h
window-management-wincontrol/: CMakeLists.txt  katla-window-management-wincontrol.h  wincontrol-window-factory.h  wincontrol-window.cpp  wincontrol-window.h
(+176 files in other folders)
